--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,5 +1,6 @@
 meta_product_name: "Zebrasclub"
-meta_title: "Zebrasclub - The worlds number one referee store"
-meta_description: "Get a hockey referee package at the lowest price!"
-meta_image: "banner-image-2.jpg"                       # should exist in `app/assets/images/`
+meta_title: "Zebrasclub.com - Le plus grand magasin pour équipement d'arbitre de hockey"
+meta_description: "Magasin en ligne: pantalons, chandails, siflets, casques, visières, shin tights, brassards, ..."
+meta_image: "meta_donné_banner.png"
 twitter_account: "@zebrasclub"   # required for Twitter Cards
+# meta_image: "banner-image-2.jpg"                       # should exist in `app/assets/images/`
