I added I18n and it finally works. with only the available_locales witch are fr,en and es. So now i can get the javscript to work with my locales/js/#{locale}.yml files but it display only in fr. I still have that to fix

--- a/config/i18n-js.yml
+++ b/config/i18n-js.yml
@@ -16,8 +16,15 @@
 # the following configuration to something like this:
 #
 # translations:
-#   - file: "app/assets/javascripts/i18n/translations.js"
+# - file: 'public/javascripts/fr.js'
+#   only: 'fr.*'
+# - file: 'public/javascripts/en.js'
+#   only: 'en.*'
 #
+translations:
+- file: "app/assets/javascripts/application/i18n/translations.js"
+  only: '*.js.*'
+
 # If you're running an old version, you can use something
 # like this:
 #
